force-app/main/default/objects/xtma_Email_Result__c/fields/Bounce_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Rate__c</fullName>
    <formula>Number_Bounced__c  /  Number_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bounce Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>