force-app/main/default/objects/xtma_Email_Result__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Email Results</relationshipLabel>
    <relationshipName>R00N30000001MXe3EAG</relationshipName>
    <type>Lookup</type>
</CustomField>