force-app/main/default/objects/xtma_Email_Result__c/fields/Click_Through_Rate__c.field-meta.xml
<CustomField>
    <fullName>Click_Through_Rate__c</fullName>
    <formula>Number_of_Unique_Clicks__c /  Number_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Click Through Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>