force-app/main/default/objects/xtma_Email_Result__c/fields/Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>Open_Rate__c</fullName>
    <formula>Number_of_Unique_Opens__c /  Number_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>