force-app/main/default/objects/xtma_Email_Result__c/fields/Unsubscribe_Rate__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_Rate__c</fullName>
    <formula>Number_Unsubscribed__c /  Number_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unsubscribe Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>